About Section added

--- a/index.html
+++ b/index.html
@@ -12,28 +12,47 @@
 <body>
     <header class="header">
         <div class="left">
-            <h2>Medha's portfolio</h2>
+            <h1>Medha's portfolio</h1>
         </div>
         <div class="right">
             <ul>
-                <li class="l1"><a href="#">home</a></li>
-                <li class="l1"><a href="#">About</a></li>
-                <li class="l1"><a href="#">Service</a></li>
-                <li class="l1"><a href="medha.html" target="_blank">Contact</a></li>
+                <li class="l1"><a href="/">Home</a></li>
+                <li class="l1"><a href="#about">About</a></li>
+                <li class="l1"><a href="#services">Service</a></li>
+                <li class="l1"><a href="#contact" target="_blank">Contact</a></li>
             </ul>
         </div>
     </header>
-    <main class="main">
+    <main class="main" id="about">
         <div class="container">
             <div class="left1">Hye,I am <span class="span1">Medha</span>
                 <div>I am passionate <span id="element"> </span>
                 </div>
             </div>
             <div class="right1">
-                <img class="image" src="me5.jpeg" alt="mine"></div>
+                <img class="image" src="me5.jpeg" alt="mine">
+            </div>
 
         </div>
     </main>
+    <br>
+
+
+    <!-- // About -->
+    <div class="About">
+
+        <h1 class="text-center">About Me</h1>
+        <div class="about-text">
+            <p>I am a passionate full stack developer with a knack for crafting robust and scalable web applications.
+                With 5
+                years of hands-on experience, I have honed my skills in front-end technologies like React and Next.js,
+                as
+                well as back-end technologies like Node.js, MySQL, PostgreSQL, and MongoDB. My goal is to leverage my
+                expertise to create innovative solutions that drive business growth and deliver exceptional user
+                experiences.</p>
+        </div>
+
+    </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- Setup and start animation! -->
