Responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main class="main" id="about">
         <div class="container">
-            <div class="left1">Hye,I am <span class="span1">Medha</span>
+            <div class="left1">Hye, I am <span class="span1">Medha</span>
                 <div>I am passionate <span id="element"> </span>
                 </div>
             </div>
@@ -38,7 +38,7 @@
     <br>
 
 
-    <!-- // About -->
+    <!--  About -->
     <div class="About">
 
         <h1 class="text-center">About Me</h1>
@@ -58,7 +58,7 @@
     <!-- Setup and start animation! -->
     <script>
         var typed = new Typed('#element', {
-            strings: ['  web developer', '   wordpress developer', '  software developer', 'singer', 'dancer'],
+            strings: ['  Web developer', '   Wordpress developer', '  Software developer', 'Singer', 'Dancer'],
             typeSpeed: 50,
         });
     </script>
